# rust-new-project-template

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  rustpod.yaml
.devcontainer/: Dockerfile
.github/workflows/: build.yml  lint.yml  release.yml  rust.yml  rustfmt.yml  tests.yml
K8s/: rustpod.yaml
benches/: sorting_benchmark.rs
src/: main.rs
week1/: Cargo.toml  README.md
week10/: Cargo.toml  README.md
week10/src/: main.rs
week11/: Cargo.toml  README.md
week11/src/: main.rs
week12/: Cargo.toml  README.md  export.py
week12/src/: main.rs
week13/: Cargo.toml  README.md
week13/src/: main.rs
week2/: Dockerfile  README.md
week2/.github/workflows/: build.yml
week3/: Cargo.toml  README.md
week3/benches/: sorting_benchmark.rs
week4/: README.md
week5/: Cargo.toml  README.md
week5/src/: main.rs
week5/summarization/: README.md  package.json  vite.config.ts
week6/: README.md
week7/: Cargo.toml  Dockerfile.gpu  README.md
week7/src/: main.rs
