[package]
name = "week11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tract-onnx = "0.19.7"
ndarray="0.15.6"
tokenizers="0.13.2"
image = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
