[package]
name = "week13"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.0"
actix-files = "0.6.2"

chrono = { version = "0.4.23", features = ["serde"] }
env_logger = "0.10.0"
exitfailure = "0.5.1"
serde = { version = "1.0.152", features = ["derive"] }
uuid = { version = "1.2.2", features = ["v4"] }
log = "0.4.17"
ndarray="0.15.6"
tokenizers="0.13.2"
image = "0.24.0"
serde_json = "1.0"
actix-multipart = "0.6.0"
futures = "0.3.28"